--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "erc20"
   ],
   "author": "Fodé Diop",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "big-integer": "^1.6.28",
+    "dotenv": "^5.0.1",
+    "truffle-hdwallet-provider": "0.0.3",
+    "zeppelin-solidity": "1.8.0"
+  }
 }
