--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "license": "MIT",
   "dependencies": {
     "big-integer": "^1.6.28",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "dotenv": "^5.0.1",
     "truffle-hdwallet-provider": "0.0.3",
     "zeppelin-solidity": "1.8.0"
