--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "big-integer": "^1.6.28",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "dotenv": "^5.0.1",
+    "ganache-cli": "^6.1.0",
     "truffle-hdwallet-provider": "0.0.3",
     "zeppelin-solidity": "1.8.0"
+  },
+  "devDependencies": {
+    "dotenv": "^5.0.1"
   }
 }
